update pricing table

--- a/partials/pricing.html
+++ b/partials/pricing.html
@@ -20,20 +20,19 @@
         <div class="col-sm-3">
             <div class="panel panel-default text-center">
                 <div class="panel-heading">
-                    <strong>Basic</strong>
+                    <strong>Personal</strong>
                 </div>
                 <div class="panel-body">
-                    <h3 class="panel-title price">$9
-                        <span class="price-cents">99</span>
-                        <span class="price-month">mo.</span>
+                    <h3 class="panel-title price">Free
+                        <!--<span class="price-cents">99</span>-->
+                        <!--<span class="price-month">/month</span>-->
                     </h3>
                 </div>
                 <ul class="list-group">
-                    <li class="list-group-item">5 Projects</li>
-                    <li class="list-group-item">5 GB of Storage</li>
-                    <li class="list-group-item">Up to 100 Users</li>
-                    <li class="list-group-item">10 GB Bandwidth</li>
-                    <li class="list-group-item">Security Suite</li>
+                    <li class="list-group-item">Get 10 GB secure storage with 250 MB file upload size</li>
+                    <li class="list-group-item">1 User</li>
+                    <li class="list-group-item">10-100 GB Storage</li>
+                    <li class="list-group-item">250 MB or 5 GB File Size</li>
                     <li class="list-group-item"><a class="btn btn-primary">Sign Up Now!</a>
                     </li>
                 </ul>
@@ -42,20 +41,19 @@
         <div class="col-sm-3">
             <div class="panel panel-default text-center">
                 <div class="panel-heading">
-                    <strong>Plus</strong>
+                    <strong>Starter</strong>
                 </div>
                 <div class="panel-body">
-                    <h3 class="panel-title price">$19
-                        <span class="price-cents">99</span>
-                        <span class="price-month">mo.</span>
+                    <h3 class="panel-title price">$6
+                        <!--<span class="price-cents">99</span>-->
+                        <span class="price-month">user/month</span>
                     </h3>
                 </div>
                 <ul class="list-group">
-                    <li class="list-group-item">10 Projects</li>
-                    <li class="list-group-item">10 GB of Storage</li>
-                    <li class="list-group-item">Up to 250 Users</li>
-                    <li class="list-group-item">25 GB Bandwidth</li>
-                    <li class="list-group-item">Security Suite</li>
+                    <li class="list-group-item">Shared workspace for your team or project</li>
+                    <li class="list-group-item">3 to Max 10 Users</li>
+                    <li class="list-group-item">100 GB Storage</li>
+                    <li class="list-group-item">2 GB File Size</li>
                     <li class="list-group-item"><a class="btn btn-primary">Sign Up Now!</a>
                     </li>
                 </ul>
@@ -64,20 +62,19 @@
         <div class="col-sm-3">
             <div class="panel panel-default text-center">
                 <div class="panel-heading">
-                    <strong>Premium <span class="label label-success">Best Value!</span></strong>
+                    <strong>Business <span class="label label-success">Most Popular!</span></strong>
                 </div>
                 <div class="panel-body">
-                    <h3 class="panel-title price">$29
-                        <span class="price-cents">99</span>
-                        <span class="price-month">mo.</span>
+                    <h3 class="panel-title price">$17
+                        <!--<span class="price-cents">99</span>-->
+                        <span class="price-month">user/month</span>
                     </h3>
                 </div>
                 <ul class="list-group">
-                    <li class="list-group-item">Unlimited</li>
-                    <li class="list-group-item">50 GB of Storage</li>
-                    <li class="list-group-item">Up to 1000 Users</li>
-                    <li class="list-group-item">100 GB Bandwidth</li>
-                    <li class="list-group-item">Security Suite</li>
+                    <li class="list-group-item">Content collaboration and user management</li>
+                    <li class="list-group-item">Minimum 3 Users</li>
+                    <li class="list-group-item">Unlimited Storage</li>
+                    <li class="list-group-item">5 GB File Size</li>
                     <li class="list-group-item"><a class="btn btn-primary">Sign Up Now!</a>
                     </li>
                 </ul>
@@ -86,21 +83,20 @@
         <div class="col-sm-3">
             <div class="panel panel-default text-center">
                 <div class="panel-heading">
-                    <strong>Ultimate</strong>
+                    <strong>Enterprise</strong>
                 </div>
                 <div class="panel-body">
-                    <h3 class="panel-title price">$49
-                        <span class="price-cents">99</span>
-                        <span class="price-month">mo.</span>
+                    <h3 class="panel-title price">
+                        <!--<span class="price-cents">99</span>-->
+                        <span class="price-month">Contact us for Quote</span>
                     </h3>
                 </div>
                 <ul class="list-group">
-                    <li class="list-group-item">Unlimited</li>
-                    <li class="list-group-item">150 GB of Storage</li>
-                    <li class="list-group-item">Unlimited</li>
-                    <li class="list-group-item">500 GB Bandwidth</li>
-                    <li class="list-group-item">Security Suite</li>
-                    <li class="list-group-item"><a class="btn btn-primary">Sign Up Now!</a>
+                    <li class="list-group-item">Secure and scalable content and management</li>
+                    <li class="list-group-item">Customized</li>
+                    <li class="list-group-item">Unlimited Storage</li>
+                    <li class="list-group-item">5 GB File Size</li>
+                    <li class="list-group-item"><a class="btn btn-primary">Get in touch!</a>
                     </li>
                 </ul>
             </div>
